--- a/HW4/PubH7430_OstroushkoDenis_A4.qmd
+++ b/HW4/PubH7430_OstroushkoDenis_A4.qmd
@@ -46,6 +46,8 @@ ggplot(data = vit_e,
 ## 1 - B 
 
 ```{r}
+#| label: tbl-1b
+#| tbl-cap: "Problem 1B Estimates" 
 naive_lm <- lm(vite ~ timemonths, data = vit_e)
 
 summary(naive_lm)$coefficients %>% 
@@ -73,7 +75,7 @@ signif_1 = ifelse(significace_1 >= 0.05,
 ```
 
 
-For each additional follow up visit we saw an average `r est_1_show` 
+For each additional three months  we saw an average `r est_1_show` 
 `r direction` in the Vitamin E $\mu$g/dl levels. Standard error is `r round(est_2, 2)`.
 Effect is bounded by a `r confint_1` 95% confidence interval,
 `r signif_1` between three months of additional time and vitamin E levels.
@@ -81,6 +83,8 @@ Effect is bounded by a `r confint_1` 95% confidence interval,
 ## 1 - C 
 
 ```{r}
+#| label: tbl-cb
+#| tbl-cap: "Problem 1C Estimates" 
 good_model <- lmer(vite ~ timemonths + (1 | id), data = vit_e)
 
 summary(good_model)[["coefficients"]] %>% 
@@ -105,7 +109,7 @@ confint(good_model)[rownames(confint(good_model)) == "timemonths"] %>%
 
 ```
 
-For each additional follow up visit we saw an average `r est_1_show` 
+For each additional three month we saw an average `r est_1_show` 
 `r direction` in the Vitamin E level in $\mu$g/dl levels. Standard error is `r round(est_2, 2)`.
 Effect is bounded by a `r confint_1` 95% confidence interval. There is strong statistical evidence that 
 for the average subject, 
@@ -114,7 +118,7 @@ as the amount of time since baseline increases, expected Vitamin E levels levels
 ## 1 - D 
 
 Time since baseline is a cluster varying covariate. Failing to account for an existing correlation structure 
-leads to an inflated standard errors, higher p-values, and wider confidence intervals. We end up performing 
+leads to an inflated standard error, higher p-values, and wider confidence intervals. We end up performing 
 conservative statistical inference, which may prevent us from discovering a statistically significant 
 fixed effect. 
 
@@ -140,6 +144,8 @@ us account for the majority of variance in the data set. We saw visual hits of t
 ## 1 - F 
 
 ```{r}
+#| label: tbl-1f
+#| tbl-cap: "Problem 1F Estimates" 
 model_c <- lmer(vite ~ timemonths + (timemonths|id), data = vit_e)
 
 summary(model_c)[["coefficients"]] %>% 
@@ -163,11 +169,11 @@ confint(model_c)[rownames(confint(model_c)) == "timemonths"] %>%
   paste0("(", ., ")") -> confint_1
 ```
 
-For each additional follow up visit we saw an average `r est_1_show` 
-`r direction` in the Vitamin E level in $\mu$g/dl levels. Standard error is `r round(est_2, 2)`.
+For each additional follow up visit we saw an average `r est_1_show` $\mu$g/dl `r direction` in the Vitamin E levels. Standard error is `r round(est_2, 2)`.
 Effect is bounded by a `r confint_1` 95% confidence interval. There is strong statistical evidence that for the average subject, 
 as the amount of time since baseline increases, expected Vitamin E levels levels decrease. 
 
+**Note for later** not sure why standard error increased slightly when using slope/intercept compared with just the slope. It could the case that fitting a more complex model leads to less efficient use of the data, which leads to less efficient variance estimate for the fixed effects. Not sure though, need to find an answer later. 
 
 ## 1 - G
 
@@ -245,36 +251,77 @@ model_2a_gee <- geeglm(formula = seizures ~ visit*trt,
 
 ### 2 - A - (ii)
 
-@tbl-2a-gee-coef shows exponentiated coefficients, 95% end point transformed confidence interval, a Wald 
-statistic and a p-value for the test of main effect significance. 
+@tbl-2a-gee-coef shows Poisson GEE estimates. Transformation was not applied to aid with the interpretation in the 
+next section. 
 
 ```{r}
 #| label: tbl-2a-gee-coef
-#| tbl-cap: "Exponentiated Model Patameters" 
+#| tbl-cap: "Problem 2A Estimates" 
 #| 
 summary(model_2a_gee)[["coefficients"]] %>% 
-  mutate(exp_estiamte = exp(Estimate) %>% round(., 1), 
-         exp_ci = paste0("(", 
-                         exp(Estimate - 1.96 * Std.err) %>% round(., 2),
-                         ", ", 
-                         exp(Estimate + 1.96 * Std.err) %>% round(., 2),
-                         ")"
-                         )) %>% 
-  select(exp_estiamte, exp_ci, Wald, `Pr(>|W|)`) %>% 
   kable(booktabs = T, 
-        col.names = c("Exp. Coefficient", "95% CI", "Wald", "Pr(>|W|)") , 
         digits = 2, 
         align = 'c') %>% 
   kable_styling(latex_options = 'hold_position')
 ```
 
+
+
+```{r}
+#| eval: false 
+
+summary(model_2a_gee)[["coefficients"]]
+
+summary(model_2a_gee)[["coefficients"]] %>% 
+  mutate(exp_estiamte = exp(Estimate) %>% round(., 1))
+
+vcov(model_2a_gee)
+```
+
+
+
 ### 2 - A - (iii)
 
-* We fist focus on the significance of the interaction term
+```{r}
+var_trt_baseline <- 0.16496255^2 + 0.27809652 ^ 2 + 2 * (-0.0272126421)
+
+var_trt_slope <- 0.04127281^2 + 0.05217682^2 + 2*(-0.0017034448)
+```
+
+Due to the interaction term, we need to interpret most effects as effects conditional on treatment.  
+Since the model provides the effects of predictors on the log of seizure rate, we first estimate effects and 95% 
+CI on this scale, and then will transform back to the scale of the original response variable. This step is 
+needed for the accurate handling of interactions. 
+
+* **Intercept** represents the average of log-seizure rate among non-treated at baseline, after adjusting for other predictors. 
+The average seizure rate at baseline among non-treated was `r round(exp(2.155157011), 1)`, after adjusting for other variables.
+The average is bounded by the (`r round(exp(2.155157011 - 1.96 * 0.16496255), 2)`, `r round(exp(2.155157011 + 1.96 * 0.16496255), 2)`) 95% normal confidence interval. 
+
+* **Treatment** represents change in the average of log-seizure rate among treated at baseline when compared with non-treated, after adjusting for other predictors. 
+The average seizure rate at baseline among treated was `r round(exp(2.155157011 + 0.011346273), 1)`, after adjusting for other variables.
+The average is bounded by the (`r round(exp(2.155157011 + 0.011346273 - 1.96 * sqrt(var_trt_baseline)), 2)`, `r round(exp(2.155157011 + 0.011346273 + 1.96 * sqrt(var_trt_baseline)), 2)`) 95% normal confidence interval. 
+
+* **Visit** represents the average change in log-seizure rate among non-treated at each extra follow-up time point, after adjusting for other variables. For non-treated, the average seizure rate decreased by `r round(exp(-0.008417732	), 2)`, or `r round(exp(-0.008417732	) - 1, 3)*100`%, at each additional follow up, after 
+adjusting for other predictors. The effects was bounded by the (`r round(exp(-0.008417732	 - 1.96 * 0.04127281), 2)`, 
+`r round(exp(-0.008417732	 + 1.96 * 0.04127281), 2)`) 95% normal confidence interval. 
+Confidence interval includes 1, indicating that we do not have enough statistical evidence to conclude that the 
+seizure rate among non-treated changed at each additional follow up period. 
+
+
+* **Interaction term** represents effect modification for the average change in log-seizure rate among treated at each extra follow-up time point, after adjusting for other variables. For treated, the average seizure rate decreased by `r round(exp(0.011346273-0.035089034	), 2)`, or `r round(exp(0.011346273-0.035089034) - 1, 3)*100`%, at each additional follow up, after 
+adjusting for other predictors. The effects was bounded by the (`r round(exp(0.011346273-0.035089034 - 1.96 * sqrt(var_trt_slope)), 2)`, 
+`r round(exp(0.011346273-0.035089034 + 1.96 * sqrt(var_trt_slope)), 2)`) 95% normal confidence interval. 
+Confidence interval includes 1, indicating that we do not have enough statistical evidence to conclude that the 
+seizure rate among treated changed at each additional follow up period. 
 
 ## 2 - B 
 
 ### 2 - B - (i) 
+We are using a Poisson GLMM model with a canonical log-link function. Conditional mean model for the number of seizures is given by:
+
+\begin{align*}
+log(E(seizures_{ij})) &= \beta_0 + \beta_1 visit_{ij} + \beta_2 treatment_{ij} + \beta_3 visit_{ij} \times treatment_{ij} + b_i
+\end{align*}
 
 ```{r}
 model_2b <- glmer(seizures ~ visit*trt + (1|subject), 
@@ -288,29 +335,59 @@ model_2b <- glmer(seizures ~ visit*trt + (1|subject),
 ### 2 - B - (ii)
 
 ```{r}
-
+#| label: tbl-2b-gee-coef
+#| tbl-cap: "Problem 2B Estimates" 
+#| 
 summary(model_2b)[["coefficients"]] %>% 
-  data.frame() %>% 
-  mutate(exp_estiamte = exp(Estimate) %>% round(., 1), 
-         exp_ci = paste0("(", 
-                         exp(Estimate - 1.96 * `Std..Error`) %>% round(., 2),
-                         ", ", 
-                         exp(Estimate + 1.96 * `Std..Error`) %>% round(., 2),
-                         ")"
-                         )) %>% 
-  select(exp_estiamte, exp_ci, `z.value`, `Pr...z..`) %>% 
   kable(booktabs = T, 
-        col.names = c("Exp. Coefficient", "95% CI", "Z", "Pr(>|W|)") , 
         digits = 2, 
         align = 'c') %>% 
   kable_styling(latex_options = 'hold_position')
 ```
 
+```{r}
+#| eval: false 
+
+summary(model_2b)
+
+summary(model_2b)[["coefficients"]]
+
+vcov(model_2b)
+```
+
+```{r}
+var_trt_baseline <- 0.0282558649 + 0.0540628835 + 2 * (-0.0282164196)
+
+var_trt_slope <- 0.0004209142 + 0.0008244823 + 2*(0.0008347427)
+```
+
 ### 2 - B - (iii)
+
+* **Intercept** states that for the average subject in the no-treatment group, we estimate the average log-seizures at baseline
+at `r round(1.81819219, 2)`, after adjusting for other variables. The average seizure rate at baseline for non-treated at baseline is `r round(exp(1.81819219), 2)`. The average is bounded by the (`r round(exp(1.81819219 - 1.96 * 0.16809481), 2)`, `r round(exp(1.81819219 + 1.96 * 0.16809481), 2)`) 95% normal confidence interval. 
+
+* **Treatment** represents change in the average of log-seizure rate among treated at baseline when compared with non-treated, after adjusting for other predictors. 
+The average seizure rate at baseline among treated was `r round(exp(1.81819219 -0.11829889), 1)`, after adjusting for other variables. The average was bounded by the (`r round(exp(1.81819219 -0.11829889 - 1.96 * sqrt(var_trt_baseline)), 2)`, `r round(exp(1.81819219 -0.11829889 + 1.96 * sqrt(var_trt_baseline)), 2)`) 95% normal confidence interval. 
+
+* **Visit** represents the average change in log-seizure rate for a given subject in the non-treated 
+population with each additional visit, after adjusting for other predictors. For a given subject, 
+the average change in seizure rate decrease by `r round(exp(-0.00841853), 2)`, or by  `r ((round(exp(-0.00841853), 3))-1)*100`%, after adjusting for other predictors. The effect is bounded by the (`r round(exp(-0.00841853 - 1.96 * 0.02051619), 2)`, `r round(exp(-0.00841853 + 1.96 * 0.02051619), 2)`) normal confidence interval. The interval includes 1, indicating there is no concrete evidence that the seizure rates for a given non-treated subject decrease at additional visits, after adjusting for other predictors. 
+
+* **Interaction term**represents the average change in log-seizure rate for a given subject in the treated 
+population with each additional visit, after adjusting for other predictors. For a given subject, 
+the average change in seizure rate decrease by `r round(exp(-0.00841853 -0.03509752), 2)`, or by  `r ((round(exp(-0.00841853 -0.03509752), 3))-1)*100`%, after adjusting for other predictors. The effect is bounded by the (`r round(exp(-0.00841853 -0.03509752 - 1.96 * sqrt(var_trt_slope)), 2)`, `r round(exp(-0.00841853 -0.03509752 + 1.96 * sqrt(var_trt_slope)), 2)`) normal confidence interval. The interval includes 1, indicating there is no concrete evidence that the seizure rates for a given treated subject decrease at additional visits, after adjusting for other predictors. 
+
 
 ## 2 - C 
 
+Obtained estimates are not the same. This is because we have a non-identity link function for the mean model, therefore conditional and marginal models do not estimate the same quantities. While GEE aims to get the average impact of treatment, additional visits, and their interaction on the overall population average, GLMM aims to get the impact of the these factors on a given subject. Therefore, the results of two models do not match, which is what we would expect. 
+
 ## 2 - D
+
+I want to argue that Poisson GLMM is a more appropriate model for this sample of data. @fig-spah_just_1 shows 
+individual trends in seizure rates over time, as well overall average trend in population. 
+We can see that variance around population average trend is quite large, while variance within each 
+individual cluster appears to be small. 
 
 ```{r}
 #| label: fig-spah_just_1
@@ -323,10 +400,17 @@ ggplot(data = seiz,
   theme_minimal() + 
   geom_line(alpha = 0.5) + 
   geom_smooth(aes(group = 1), color = "red", se = T, size = 1) + 
-  geom_smooth(aes(group = 1), color = "blue", se = F, size = 1, method = "lm")
+  geom_smooth(aes(group = 1), color = "blue", se = F, size = 1, method = "lm") + 
+  labs(x = "Visit", 
+       y = "Log Seizure Rates")
   
 
 ```
+
+@fig-spah_just_2 shows linear trends over time within each individual cluster. Slopes are given varying color 
+on the gradient for visualization purposes. It appears that individual intercepts vary quite a lot for the clusters,
+while slopes appear to be quite different as well. Some have increasing, while some have decreasing trend. 
+Next, we investigate if treatment has large impact on individual trends. 
 
 ```{r warning=FALSE}
 #| label: fig-spah_just_2
@@ -339,10 +423,18 @@ ggplot(data = seiz,
   theme_minimal() + 
   geom_line(alpha = 0.25) + 
   geom_smooth(aes(color = subject), se = F, size = 1, method = "lm") + 
-  scale_color_gradientn(colors = rainbow(3))
+  scale_color_gradientn(colors = rainbow(3))+ 
+  labs(x = "Visit", 
+       y = "Log Seizure Rates", 
+       color = "Treatment")
   
 
 ```
+
+@fig-spah_just_3 shows the same cluster-specific regression lines, while coloring them by treatment assignment. 
+It appears that both groups have quite a lot of variability in the random intercepts. Additionally, both groups
+have slopes that both show increase and decrease over time. This suggests that, perhaps, random slopes may be 
+an appropriate addition for the Poisson GLMM model. 
 
 ```{r warning=FALSE}
 #| label: fig-spah_just_3
@@ -354,22 +446,26 @@ ggplot(data = seiz,
        aes(x = visit, y = log(seizures+1), group = subject)) + 
   theme_minimal() + 
   geom_line(alpha = 0.25) + 
-  geom_smooth(aes(color = as.factor(trt)), se = F, size = 1, method = "lm")
+  geom_smooth(aes(color = as.factor(trt)), se = F, size = 1, method = "lm")+ 
+  labs(x = "Visit", 
+       y = "Log Seizure Rates", 
+       color = "Treatment")
   
 
 ```
 
-```{r warning=FALSE}
-#| label: fig-spah_just_4
-#| fig-cap: "Individual Trends with the population average linear and smooth trends"
-#| fig-height: 6
-#| fig-width: 8
+When it comes to comparing the models in terms of their output, @tbl-2a-gee-coef and @tbl-2b-gee-coef
+show fixed effect estimates for GEE and GLMM models respectively. Standard errors are lower for each fixed effects in GLMM, which is more favorable for the purpose of statistical inference. 
 
-ggplot(data = seiz, 
-       aes(x = visit, y = log(seizures+1), group = subject)) + 
-  theme_minimal() + 
-  geom_line(alpha = 0.25) + 
-  geom_smooth(aes(color = as.factor(trt), group = trt), se = F, size = 1, method = "lm")
-  
+Given visual evidence and model estimates from both models, GLMM seems like a favorable choice in this context. 
 
-```
+**Notes for later**
+
+Perhaps, GEE standard errors are higher because `r length(unique(seiz$subject))` clusters are not enough of a sample size to use sandwich variance estimator. 
+
+Perhaps, GEE standard errors are higher because GEE sandwich estimator will always provide higher standard error estimates due to nature of this method's estimation. 
+
+Additionally, GLMM will be more efficient than GEE when we guess that the underlying correlated structure 
+is exchangeable. 
+
+
